# ai-architect-planner

./: .gitignore  README.md  codecov.yml  pyproject.toml  setup.ps1
.github/workflows/: pytest.yml
ai_architect_planner/: __init__.py  __main__.py  cli.py  config.py  interaction.py  llm.py  project.py
ai_architect_planner/cli/: __init__.py  cli.py
ai_architect_planner/core/: __init__.py  interaction.py  project.py
ai_architect_planner/services/: __init__.py  llm.py
ai_architect_planner/utils/: __init__.py  config.py  constants.py  type_definitions.py
tests/: __init__.py  test_cli.py  test_interaction.py  test_llm.py  test_project.py
tests/cli/: test_cli.py
tests/core/: test_interaction.py  test_project.py
tests/services/: test_llm.py
