[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_architect_planner"
version = "0.1.0"
description = "AI-based architect and planner for enterprise applications"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "rich>=13.0.0",
    "pytest>=7.0.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
